Fix java/spark configuration